// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateInput/> tests renders with empty value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 10px;"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal font button iconOnly main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar main padding padding-undefined"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon main"
            tabindex="0"
          >
            <svg
              height="14"
              width="14"
            />
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with empty value date 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 10px;"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal font button iconOnly main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar main padding padding-undefined"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with empty value date time 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY HH:mm"
          style="padding-right: 10px;"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal font button iconOnly main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar main padding padding-undefined"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with invalid value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main hasError"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 10px;"
          type="text"
          value="current() + 2x"
        />
      </div>
      <div
        class="error"
      >
        Not a valid Date Expression
      </div>
    </div>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon main"
            tabindex="0"
          >
            <svg
              height="14"
              width="14"
            />
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with value  1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 10px;"
          type="text"
          value="01/23/2020"
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal font button iconOnly main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar main padding padding-undefined"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main success"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 10px;"
          type="text"
          value="current() + 2h"
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-tick main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon main"
            tabindex="0"
          >
            <svg
              height="14"
              width="14"
            />
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;
